--- a/Armanipulator_Firmware/.settings/org.eclipse.cdt.core.prefs
+++ b/Armanipulator_Firmware/.settings/org.eclipse.cdt.core.prefs
@@ -37,7 +37,7 @@ environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.BOARD/op
 environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.BOARD/value=AVR_UNO
 environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.CORE.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.CORE.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.CORE.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\hardware\\avr\\1.6.23\\cores\\arduino
+environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.CORE.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\hardware\\avr\\1.6.23\\cores\\arduino
 environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.CORE/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.CORE/operation=replace
 environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.CORE/value=arduino
@@ -67,7 +67,7 @@ environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.USB_MANU
 environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.USB_MANUFACTURER/value=\\"Unknown\\"
 environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.VARIANT.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.VARIANT.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.VARIANT.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\hardware\\avr\\1.6.23\\variants\\standard
+environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.VARIANT.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\hardware\\avr\\1.6.23\\variants\\standard
 environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.VARIANT/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.VARIANT/operation=replace
 environment/project/io.sloeber.core.toolChain.release.501407173/A.BUILD.VARIANT/value=standard
@@ -283,13 +283,13 @@ environment/project/io.sloeber.core.toolChain.release.501407173/A.RECIPE.SIZE.RE
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RECIPE.SIZE.REGEX/value=^(?\:\\.text|\\.data|\\.bootloader)\\s+([0-9]+).*
 environment/project/io.sloeber.core.toolChain.release.501407173/A.REFERENCED.CORE.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.REFERENCED.CORE.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.REFERENCED.CORE.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\hardware\\avr\\1.6.23
+environment/project/io.sloeber.core.toolChain.release.501407173/A.REFERENCED.CORE.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\hardware\\avr\\1.6.23
 environment/project/io.sloeber.core.toolChain.release.501407173/A.REFERENCED.UPLOAD.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.REFERENCED.UPLOAD.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.REFERENCED.UPLOAD.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\hardware\\avr\\1.6.23
+environment/project/io.sloeber.core.toolChain.release.501407173/A.REFERENCED.UPLOAD.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\hardware\\avr\\1.6.23
 environment/project/io.sloeber.core.toolChain.release.501407173/A.REFERENCED.VARIANT.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.REFERENCED.VARIANT.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.REFERENCED.VARIANT.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\hardware\\avr\\1.6.23
+environment/project/io.sloeber.core.toolChain.release.501407173/A.REFERENCED.VARIANT.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\hardware\\avr\\1.6.23
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.HARDWARE.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.HARDWARE.PATH/operation=replace
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.HARDWARE.PATH/value=${eclipse_home}/arduinoPlugin/packages/arduino/hardware/avr
@@ -301,31 +301,31 @@ environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.PLATFO
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.PLATFORM.PATH/value=${eclipse_home}/arduinoPlugin/packages/arduino/hardware/avr/1.6.23
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.ARDUINOOTA-1.2.1.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.ARDUINOOTA-1.2.1.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.ARDUINOOTA-1.2.1.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\arduinoOTA\\1.2.1
+environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.ARDUINOOTA-1.2.1.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\arduinoOTA\\1.2.1
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.ARDUINOOTA.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.ARDUINOOTA.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.ARDUINOOTA.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\arduinoOTA\\1.2.1
+environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.ARDUINOOTA.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\arduinoOTA\\1.2.1
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.ARDUINOOTA1.2.1.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.ARDUINOOTA1.2.1.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.ARDUINOOTA1.2.1.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\arduinoOTA\\1.2.1
+environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.ARDUINOOTA1.2.1.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\arduinoOTA\\1.2.1
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVR-GCC-5.4.0-ATMEL3.6.1-ARDUINO2.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVR-GCC-5.4.0-ATMEL3.6.1-ARDUINO2.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVR-GCC-5.4.0-ATMEL3.6.1-ARDUINO2.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\avr-gcc\\5.4.0-atmel3.6.1-arduino2
+environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVR-GCC-5.4.0-ATMEL3.6.1-ARDUINO2.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\avr-gcc\\5.4.0-atmel3.6.1-arduino2
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVR-GCC.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVR-GCC.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVR-GCC.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\avr-gcc\\5.4.0-atmel3.6.1-arduino2
+environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVR-GCC.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\avr-gcc\\5.4.0-atmel3.6.1-arduino2
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVR-GCC5.4.0-ATMEL3.6.1-ARDUINO2.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVR-GCC5.4.0-ATMEL3.6.1-ARDUINO2.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVR-GCC5.4.0-ATMEL3.6.1-ARDUINO2.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\avr-gcc\\5.4.0-atmel3.6.1-arduino2
+environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVR-GCC5.4.0-ATMEL3.6.1-ARDUINO2.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\avr-gcc\\5.4.0-atmel3.6.1-arduino2
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVRDUDE-6.3.0-ARDUINO14.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVRDUDE-6.3.0-ARDUINO14.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVRDUDE-6.3.0-ARDUINO14.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\avrdude\\6.3.0-arduino14
+environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVRDUDE-6.3.0-ARDUINO14.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\avrdude\\6.3.0-arduino14
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVRDUDE.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVRDUDE.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVRDUDE.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\avrdude\\6.3.0-arduino14
+environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVRDUDE.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\avrdude\\6.3.0-arduino14
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVRDUDE6.3.0-ARDUINO14.PATH/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVRDUDE6.3.0-ARDUINO14.PATH/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVRDUDE6.3.0-ARDUINO14.PATH/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\avrdude\\6.3.0-arduino14
+environment/project/io.sloeber.core.toolChain.release.501407173/A.RUNTIME.TOOLS.AVRDUDE6.3.0-ARDUINO14.PATH/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\tools\\avrdude\\6.3.0-arduino14
 environment/project/io.sloeber.core.toolChain.release.501407173/A.SERIAL.PORT.FILE/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/A.SERIAL.PORT.FILE/operation=replace
 environment/project/io.sloeber.core.toolChain.release.501407173/A.SERIAL.PORT.FILE/value=${A.SERIAL.PORT}
@@ -454,7 +454,7 @@ environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.ARCHITECT
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.ARCHITECTURE_ID/value=avr
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.BOARDS_FILE/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.BOARDS_FILE/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.BOARDS_FILE/value=C\:\\sloeber\\arduinoPlugin\\packages\\arduino\\hardware\\avr\\1.6.23\\boards.txt
+environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.BOARDS_FILE/value=C\:\\better\\sloeber\\arduinoPlugin\\packages\\arduino\\hardware\\avr\\1.6.23\\boards.txt
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.BOARD_ID/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.BOARD_ID/operation=replace
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.BOARD_ID/value=uno
@@ -466,7 +466,7 @@ environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.COM_PORT/
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.COM_PORT/value=
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.ECLIPSE_LOCATION/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.ECLIPSE_LOCATION/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.ECLIPSE_LOCATION/value=${eclipse_home}
+environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.ECLIPSE_LOCATION/value=C\:\\better\\sloeber\\
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.EXTRA.ALL/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.EXTRA.ALL/operation=replace
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.EXTRA.ALL/value=
@@ -490,7 +490,7 @@ environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.EXTRA.LIN
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.EXTRA.LINK/value=
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.MAKE_LOCATION/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.MAKE_LOCATION/operation=replace
-environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.MAKE_LOCATION/value=C\:\\sloeber\\arduinoPlugin\\tools\\make\\
+environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.MAKE_LOCATION/value=C\:\\better\\sloeber\\arduinoPlugin\\tools\\make\\
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.MENU/delimiter=;
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.MENU/operation=replace
 environment/project/io.sloeber.core.toolChain.release.501407173/JANTJE.MENU/value=
