--- a/Armanipulator_Firmware/.cproject
+++ b/Armanipulator_Firmware/.cproject
@@ -12,7 +12,7 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactName="${ProjName}" buildProperties="" description="" id="io.sloeber.core.toolChain.release.501407173" name="Release" parent="org.eclipse.cdt.build.core.emptycfg">
+				<configuration artifactName="${ProjName}" buildProperties="" description="" id="io.sloeber.core.toolChain.release.501407173" name="Release" optionalBuildProperties="org.eclipse.cdt.docker.launcher.containerbuild.property.volumes=,org.eclipse.cdt.docker.launcher.containerbuild.property.selectedvolumes=" parent="org.eclipse.cdt.build.core.emptycfg">
 					<folderInfo id="io.sloeber.core.toolChain.release.501407173.819917111" name="/" resourcePath="">
 						<toolChain id="io.sloeber.core.toolChain.release.165370064" name="Arduino Toolchain (Sloeber edition)" superClass="io.sloeber.core.toolChain.release">
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="io.sloeber.targetplatform.1200652855" name="Arduino Target" osList="all" superClass="io.sloeber.targetplatform"/>
@@ -42,6 +42,28 @@
 							<tool id="io.sloeber.tool.combine.204877304" name="Arduino combiner" superClass="io.sloeber.tool.combine"/>
 							<tool id="io.sloeber.tool.objcopy.eep.1251903794" name="Arduino tool objcopy command" superClass="io.sloeber.tool.objcopy.eep"/>
 							<tool id="io.sloeber.tool.size.1138311591" name="Arduino tool Print Size" superClass="io.sloeber.tool.size"/>
+						</toolChain>
+					</folderInfo>
+					<folderInfo id="io.sloeber.core.toolChain.release.501407173.158606635" name="/" resourcePath="core/core">
+						<toolChain id="io.sloeber.core.toolChain.release.2017818100" name="Arduino Toolchain (Sloeber edition)" superClass="io.sloeber.core.toolChain.release" unusedChildren="">
+							<tool id="io.sloeber.tool.sketch.compiler.cpp.1075835834" name="Arduino C++ Compiler" superClass="io.sloeber.tool.sketch.compiler.cpp.79420836">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="io.sloeber.compiler.cpp.sketch.option.incpath.1714491716" superClass="io.sloeber.compiler.cpp.sketch.option.incpath" valueType="includePath">
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Armanipulator_Firmware/core/core}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Armanipulator_Firmware/core/variant}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Armanipulator_Firmware/core}&quot;"/>
+								</option>
+								<inputType id="io.sloeber.compiler.cpp.sketch.input.944053119" name="CPP source files" superClass="io.sloeber.compiler.cpp.sketch.input"/>
+							</tool>
+							<tool id="io.sloeber.tool.compiler.c.20094241" name="Arduino C Compiler" superClass="io.sloeber.tool.compiler.c.848070321">
+								<inputType id="io.sloeber.compiler.c.sketch.input.1389664528" name="C Source Files" superClass="io.sloeber.compiler.c.sketch.input"/>
+							</tool>
+							<tool id="io.sloeber.tool.sketch.compiler.s.1527683137" name="Arduino Assembler" superClass="io.sloeber.tool.sketch.compiler.s.473481396">
+								<inputType id="io.sloeber.compiler.S.sketch.input.2041927771" name="Assembly source files" superClass="io.sloeber.compiler.S.sketch.input"/>
+							</tool>
+							<tool id="io.sloeber.tool.ar.1997124035" name="Arduino archiver" superClass="io.sloeber.tool.ar.1221648939"/>
+							<tool id="io.sloeber.tool.combine.1766743636" name="Arduino combiner" superClass="io.sloeber.tool.combine.204877304"/>
+							<tool id="io.sloeber.tool.objcopy.eep.1226776398" name="Arduino tool objcopy command" superClass="io.sloeber.tool.objcopy.eep.1251903794"/>
+							<tool id="io.sloeber.tool.size.886296736" name="Arduino tool Print Size" superClass="io.sloeber.tool.size.1138311591"/>
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
